styles/StylishNews.css
/** * Eric Meyer's Reset CSS v2.0 (http://meyerweb.com/eric/tools/css/reset/) * http://cssreset.com */
html, body, div, span, applet, object, iframe,h1, h2, h3, h4, h5, h6, p, blockquote, pre,a, abbr, acronym, address, big, cite, code,del, dfn, em, img, ins, kbd, q, s, samp,small, strike, strong, sub, sup, tt, var,b, u, i, center,dl, dt, dd, ol, ul, li,fieldset, form, label, legend,table, caption, tbody, tfoot, thead, tr, th, td,article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary,time, mark, audio, video {
	margin: 0;	
	padding: 0;	
	border: 0;	
	font-size: 1em;	
	font: inherit;	
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
	display: block;
}

body {
	line-height: 1;
}


ol, ul {
	list-style: none;
}

blockquote, q {	
	quotes: none;
}

blockquote:before, blockquote:after,q:before, q:after 
{	
	content: '';	
	content: none;
}
table {	
	border-collapse: collapse;	
	border-spacing: 0;
}

a{
	text-decoration: none;
}

/************************************************

	Sandra Sosa

*************************************************/

body{
	font-family: Helvetica, Arial, sans-serif;

	background-image:url('../images/repeater.jpg');
	background-repeat:repeat-x;
}


h1, h2, h3, h4, h5, h6{
	text-transform: uppercase; 
	font-weight: bold;
}

/****** HEADER **********************************/

header{
	background: url('../images/header.jpg');
	background-repeat: no-repeat;
	height: 300px;
}


header h1{

	padding: 200px 0 0 0;
	text-align: center;
	text-transform: lowercase; 
	font-size: 6em;
	color: #E7E7E7;
}

/****** NAV *************************************/
nav{
	/*background-image: url('../img/debut_light/debut_light.png');*/
	border-bottom: 2px solid #262626;
	height: 50px;
}

nav ul{
	width: 50%;
	margin: 0 auto;
}

nav li{
	display: inline-block;
	width: 32%;
	text-align: center;
}

nav li a:link, nav li a:visited{
	display: block;

	padding: 17px 30px;

	color: #333745;
	font-weight: bold;
	text-transform: uppercase; 
	text-decoration: none;
}

nav li a:hover, nav li a:active{
	background: #EB2E49;
	color: #E7E7E7;
	font-style: italic;
}

/****** MAIN CONTENT ****************************/
section{
	background-image: url('../images/pattern/shattered/shattered.png');
	padding: 30px 20px;

}

section h2{
	display: none;
}

/* Article */
article{
	width: 85%;
	margin: 0 auto 100px auto;
	color: #E7E7E7;
}

article img{
	box-shadow: 0 0 10px #888;
	width: 100%;
}

article span{
	display: block;
	height: 280px;

	background: #FF0000;
}

article div{
	background-image: url('../images/pattern/otis_redding/otis_redding.png');
	width: 90%;
	margin: -2px auto;
	padding: 20px;
}

article h3{
	margin: 0 0 5px 0;
	font-size: 2em;
	color: #333745;
}

article p:first-of-type{
	font-style: italic;
	font-size: 1.1em;
}

article p {
	margin: 0 0 20px 0;
}

/****** HOW? **********************************/
.howpage {
        text-align: center;
        }

.how {
        width: 250px;
        display: inline-block;
        text-align: left;

}
        article.how div {
            display: inline-block;
            width: 215px;
        }



/****** FOOTER **********************************/
footer{
	background: #333745;
	border-top: 3px solid #EB2E49;
	height: 150px;
	color: #E7E7E7;
	text-align: center;
}

footer h2{
	margin: 20px 0;
}

footer a:link, footer a:visited{
	color: #E7E7E7;
	font-size: 3em;
	padding: 20px;
	text-decoration: none;
}

footer a:hover, footer a:active{
	color: #EB2E49;
}

/***********RWD***********************************/
@media print{
   	nav {
        display:none;
    }
   	section {
        float:none;
        width:100%;
    }
}

@media screen and (max-width:490px){
    section{
        width:100%;
    }
}
@media screen and (max-width:360px){
    nav ul{
        width:100%;
    }
}
/* Bonus */
@media screen and (min-width:1000px){
    body{
        font-size:1.1875em; /* 19px */
    }
    #content img{
        width:100%; /* Snyggare, i detta fall */
    }
}

